Fixed spacing / color issues in collapsed dropdown menu.

--- a/core/static/roca/sass/roca.scss
+++ b/core/static/roca/sass/roca.scss
@@ -56,6 +56,7 @@ Author: jason
 
 	.nav-collapse.in.collapse {
 		input.search-query {
+			margin-top: 15px !important;
 			width: 50%;
 		}
 	}
@@ -165,6 +166,7 @@ img {
 				}	
 
 				.dropdown ul.dropdown-menu {
+					background: none;
 					a {
 						font-weight: normal;
 					}
@@ -671,6 +673,7 @@ footer {
 	font-size: 13px;
 	font-weight: bold;
 	border-top: 1px solid #EBEBEB;
+	border-bottom: 35px solid #585858;
 	color: #BABABA;
 
 	a {
